fixed logo on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,8 +68,8 @@ header {
 }
 
 .logo {
-    min-width: 75%;
-    max-width: 360px;
+    width: 75%;
+    max-width: 425px;
     height: auto;
     margin: 0 auto;
     display: block;
